--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ baseurl: "nvaltekar.github.io" # the subpath of your site, e.g. /blog
 title      : NIRAJ ALTEKAR
 email      : nvaltekar@outlook.com #this is also the email contact forms will go to
 description: "Personal Webpage"
-author     : Niraj Vasant Altekar
+author     : NIRAJ ALTEKAR
 # logo:     #optional, defaults to site title
   # path: assets\img\clients\creative-market.jpg
   # height: 60 #height in px, defaults to 52px
